--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,7 @@
         android:theme="@style/Theme.ListaZadan"
         tools:targetApi="31">
         <activity
-            android:name=".AddTaskActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".tasks.views.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
